# apps/chat-app-api/api/swagger.yaml
@@ -31,14 +31,11 @@ definitions:
     type: object
   models.User:
     properties:
-      email:
-        description: User's email
-        type: string
       id:
-        description: Unique identifier, e.g., OAuth provider's user ID
         type: string
-      username:
-        description: User's name
+      name:
+        type: string
+      phone:
         type: string
     type: object
   schemas.Pagination:
